--- a/layout/_common/footer.ejs
+++ b/layout/_common/footer.ejs
@@ -4,6 +4,9 @@
     	<% if(theme.site.copyright) { %>
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <% } %>
+        <div>
+            <a href="https://beian.miit.gov.cn">赣ICP备17003482号</a>
+        </div>
         <div class="publishby">
         	<%= __('copyright.theme_by') %> <a href="https://github.com/cofess" target="_blank"> cofess </a><%= __('copyright.base_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
         </div>
