--- a/layout/_script/_comment/gitalk.ejs
+++ b/layout/_script/_comment/gitalk.ejs
@@ -8,6 +8,7 @@
     clientSecret: '<%= theme.comment.gitalk.ClientSecret %>',
     repo: '<%= theme.comment.gitalk.repo %>',
     owner: '<%= theme.comment.gitalk.owner %>',
+    proxy: '<%= theme.comment.gitalk.proxy %>',
     admin: ['<%= theme.comment.gitalk.admin %>'],
     id: md5(location.pathname),
     distractionFreeMode: true
