--- a/layout/_common/footer.ejs
+++ b/layout/_common/footer.ejs
@@ -6,6 +6,7 @@
         <% } %>
         <div>
             <a href="https://beian.miit.gov.cn">赣ICP备17003482号</a>
+            <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278207736'%3E%3C/span%3E%3Cscript src='http://v1.cnzz.com/z_stat.php%3Fid%3D1278207736%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
         </div>
         <div class="publishby">
         	<%= __('copyright.theme_by') %> <a href="https://github.com/cofess" target="_blank"> cofess </a><%= __('copyright.base_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
