--- a/layout/_common/head.ejs
+++ b/layout/_common/head.ejs
@@ -50,7 +50,7 @@
   <% if (theme.site.favicon){ %>
     <link rel="icon" href="<%- theme.site.favicon %>" type="image/x-icon">
   <% } %>
-  <%- css('https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/css/style.css') %>
+  <%- css('https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io/css/style.css') %>
   <% if (page.mathjax) { %>
     <link href="https://cdn.jsdelivr.net/npm/katex@0.9.0/dist/katex.min.css" rel="stylesheet">
   <% } %>
