--- a/layout/_script/_search/insight.ejs
+++ b/layout/_script/_search/insight.ejs
@@ -9,9 +9,9 @@
             UNTITLED: '<%= __("insight.untitled") %>',
         },
         ROOT_URL: '<%= config.root %>',
-        CONTENT_URL: '<%- url_for("https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/content.json")%>',
+        CONTENT_URL: '<%- url_for("https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io/content.json")%>',
     };
     window.INSIGHT_CONFIG = INSIGHT_CONFIG;
 })(window);
 </script>
-<%- js('https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io@master/js/insight.js') %>
+<%- js('https://cdn.jsdelivr.net/gh/greycodee/greycodee.github.io/js/insight.js') %>
